--- a/views/board/write.html
+++ b/views/board/write.html
@@ -61,8 +61,8 @@ input[type=button]:hover {
 
     <div class="container">
         <form>
-            <input type="text" id="fname" name="firstname" placeholder="작성자">
-            <input type="text" id="lname" name="lastname" placeholder="제목">
+            <input type="text" id="writer" name="writer" placeholder="작성자">
+            <input type="text" id="title" name="title" placeholder="제목">
             <textarea id="content" name="content" placeholder="Write something.." style="height:200px"></textarea>
             <input type="button" value="등록">
         </form>
