--- a/views/board/list.ejs
+++ b/views/board/list.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -41,13 +40,14 @@
             <th>등록일</th>
             <th>조회수</th>
         </tr>
-        <%for(var i=0;i<10;i++){%>
+        <%for(var i=0;i<records.length;i++){%>
+        <%var obj=records[i];//배열에 들어있는 json 추출%>
         <tr>
             <td>26</td>
-            <td>오늘은 토요일이야 <%=i%></td>
-            <td>배트맨</td>
-            <td>2018-11-10</td>
-            <td>105</td>
+            <td><%=obj.title%></td>
+            <td><%=obj.writer%></td>
+            <td><%=obj.regdate%></td>
+            <td><%=obj.hit%></td>
         </tr>
         <%}%>
         <tr>
