--- a/views/board/list.ejs
+++ b/views/board/list.ejs
@@ -4,6 +4,9 @@
     산수 로직에 의존한다!!
     */
     var currentPage=cPage; //현재 보고있는 페이지!!
+    if(currentPage==undefined){//처음 페이지 요청한것과 같음
+        currentPage=1;
+    }
     var totalRecord=926;//총 레코드 수 
     var pageSize=10; //한페이지당 보여질 레코드 수
     var totalPage=Math.ceil(totalRecord/pageSize);//총 페이지 수
@@ -30,6 +33,13 @@
 
         tr:nth-child(even) {
             background-color: #f2f2f2
+        }
+
+        /* 페이지 선택시 스타일 */
+        .pageStyle{
+            font-size:25px;
+            color:red;
+            font-weight:bold;
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -66,7 +76,7 @@
             <td colspan="5" align="center">
                 ◀
                 <%for(var i=1;i<=blockSize;i++){%>
-                <a href="/board/list?currentPage=<%=i%>">[<%=i%>]</a>
+                <a  <%if(i==currentPage){%>class="pageStyle"<%}%>  href="/board/list?currentPage=<%=i%>">[<%=i%>]</a>
                 <%}%>
                 ▶
             </td>
