--- a/views/board/list.ejs
+++ b/views/board/list.ejs
@@ -1,20 +1,3 @@
-<%
-    /*(paging)페이징 처리 관련 변수 
-    페이징 처리란? 여러건의 데이터를 분할 하는방법
-    산수 로직에 의존한다!!
-    */
-    var currentPage=cPage; //현재 보고있는 페이지!!
-    if(currentPage==undefined){//처음 페이지 요청한것과 같음
-        currentPage=1;
-    }
-    var totalRecord=926;//총 레코드 수 
-    var pageSize=10; //한페이지당 보여질 레코드 수
-    var totalPage=Math.ceil(totalRecord/pageSize);//총 페이지 수
-    var blockSize=10;//블럭당 보여질 페이지 수!!
-    var firstPage=currentPage - (currentPage-1)%blockSize;//블럭당 시작 페이지
-    var lastPage=firstPage+(blockSize-1);//블럭당 마지막 페이지
-%>
-<%="현재 페이지는 "+currentPage%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -64,23 +47,23 @@
             <th>등록일</th>
             <th>조회수</th>
         </tr>
-        <%for(var i=0;i<pageSize;i++){%>
-        <%//var obj=records[i];//배열에 들어있는 json 추출%>
+        <%for(var i=0;i<pm.pageSize;i++){%>
+        <%var obj=records[i];//배열에 들어있는 json 추출%>
         <tr>
             <td>26</td>
-            <td><%//=obj.title%></td>
-            <td><%//=obj.writer%></td>
-            <td><%//=obj.regdate%></td>
-            <td><%//=obj.hit%></td>
+            <td><%=obj.title%></td>
+            <td><%=obj.writer%></td>
+            <td><%=obj.regdate%></td>
+            <td><%=obj.hit%></td>
         </tr>
         <%}%>
         <tr>
             <td colspan="5" align="center">
-                <a href="/board/list?currentPage=<%=firstPage-1%>">◀</a>
-                <%for(var i=firstPage;i<=lastPage;i++){%>
-                <a  <%if(i==currentPage){%>class="pageStyle"<%}%>  href="/board/list?currentPage=<%=i%>">[<%=i%>]</a>
+                <a href="/board/list?currentPage=<%=pm.firstPage-1%>">◀</a>
+                <%for(var i=pm.firstPage;i<=pm.lastPage;i++){%>
+                <a  <%if(i==pm.currentPage){%>class="pageStyle"<%}%>  href="/board/list?currentPage=<%=i%>">[<%=i%>]</a>
                 <%}%>
-                <a href="/board/list?currentPage=<%=lastPage+1%>">▶</a>
+                <a href="/board/list?currentPage=<%=pm.lastPage+1%>">▶</a>
             </td>
         </tr>        
         <tr>
